Fixed scrollbar problem for small content pages

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,6 +25,7 @@ body {
 .content {
     position: fixed;
     left: 30%;
+    right: 0%;
     height: 100%;
     overflow-y: scroll;
     padding: 10px;
